add distributed Erlang subsection

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -61,7 +61,7 @@
 }
 
 @online{ericsson_erlang_processes_2016,
-    author = {Ericsson},
+    author = {Erlang},
 	title = {Erlang -- Processes},
 	url = {http://erlang.org/doc/reference_manual/processes.html#monitors},
 	urldate = {2020-05-06},
@@ -79,4 +79,35 @@
 	date = {2020-04-22},
 	note = {original-date: 2018-01-31T13:51:46Z},
 	keywords = {distributed-systems, elixir, erlang, failure-detection}
+}
+
+@online{erlang_introduction,
+	title = {Erlang -- Introduction},
+	author = {Erlang},
+	url = {http://erlang.org/doc/system_architecture_intro/sys_arch_intro.html},
+	urldate = {2020-05-13},
+	date = {2020-05-13},
+	file = {Erlang -- Introduction:/home/ed/Zotero/storage/6G4ZKPYB/sys_arch_intro.html:text/html}
+}
+
+@online{erlang_distributed,
+	title = {Erlang -- Distributed Erlang},
+	author = {Erlang},
+	url = {http://erlang.org/doc/reference_manual/distributed.html},
+	urldate = {2020-05-13},
+	date = {2020-05-13},
+	file = {Erlang -- Distributed Erlang:/home/ed/Zotero/storage/M25M83DY/distributed.html:text/html}
+}
+
+
+@book{hebert_learn_2013,
+	location = {San Francisco},
+	edition = {1 edition},
+	title = {Learn You Some Erlang for Great Good!: A Beginner's Guide},
+	isbn = {978-1-59327-435-1},
+	shorttitle = {Learn You Some Erlang for Great Good!},
+	abstract = {Erlang is the language of choice for programmers who want to write robust, concurrent applications, but its strange syntax and functional design can intimidate the uninitiated. Luckily, there’s a new weapon in the battle against Erlang-phobia: Learn You Some Erlang for Great Good!Erlang maestro Fred Hébert starts slow and eases you into the basics: You’ll learn about Erlang’s unorthodox syntax, its data structures, its type system (or lack thereof!), and basic functional programming techniques. Once you’ve wrapped your head around the simple stuff, you’ll tackle the real meat-and-potatoes of the language: concurrency, distributed computing, hot code loading, and all the other dark magic that makes Erlang such a hot topic among today’s savvy developers.As you dive into Erlang’s functional fantasy world, you’ll learn about:–Testing your applications with {EUnit} and Common Test–Building and releasing your applications with the {OTP} framework–Passing messages, raising errors, and starting/stopping processes over many nodes–Storing and retrieving data using Mnesia and {ETS}–Network programming with {TCP}, {UDP}, and the inet module–The simple joys and potential pitfalls of writing distributed, concurrent {applicationsPacked} with lighthearted illustrations and just the right mix of offbeat and practical example programs, Learn You Some Erlang for Great Good! is the perfect entry point into the sometimes-crazy, always-thrilling world of Erlang.},
+	publisher = {No Starch Press},
+	author = {Hebert, Fred},
+	date = {2013-01-13}
 }
