--- a/kursinis.tex
+++ b/kursinis.tex
@@ -100,7 +100,7 @@ Toliau detaliau apžvelgsime kaip Raft užtikrina tai, kad galiausiai būtų iš
 
 \subsection{Raft lyderio išrinkimas}
 
-Pagal Raft, mazgas kuris yra lyderis periodiškai siunčia savo sekėjams tuščias įrašo pridėjimo užklausas (\texttt{AppendEntries}), taip užtikrinant savo ,,širdies plakimą'' (angl. ,,heartbeat'')~\cite{ongaro_consensus}. Jeigu sekėjas kažkurį laiką negauna užklausų iš lyderio, sekėjas pradeda naujus rinkimus ir pasisiūlo kaip kandidatas į naują lyderį. Laikas, po kurio sekėjas pradės naujo termino rinkimus vadinamas \textit{rinkimų laiku} (angl. \textit{election timeout}). Rinkimų laikas yra atsitiktinė reikšmė iš pasirinkto laiko intervalo, kas padeda greičiau išrinkti naują lyderį kai yra daugiau negu vienas kandidatas~\cite{ongaro_consensus}.
+Pagal Raft, mazgas kuris yra lyderis periodiškai siunčia savo sekėjams tuščias įrašo pridėjimo užklausas (\texttt{AppendEntries}), taip užtikrinant savo ,,širdies plakimą'' (angl. \textit{heartbeat})~\cite{ongaro_consensus}. Jeigu sekėjas kažkurį laiką negauna užklausų iš lyderio, sekėjas pradeda naujus rinkimus ir pasisiūlo kaip kandidatas į naują lyderį. Laikas, po kurio sekėjas pradės naujo termino rinkimus vadinamas \textit{rinkimų laiku} (angl. \textit{election timeout}). Rinkimų laikas yra atsitiktinė reikšmė iš pasirinkto laiko intervalo, kas padeda greičiau išrinkti naują lyderį kai yra daugiau negu vienas kandidatas~\cite{ongaro_consensus}.
 
 Kad pradėtų rinkimus, sekėjas tampa kandidatu, balsuoja šiame rinkimų termine už save, ir išsiunčia visiems kitiems mazgams prašymo balsuoti užklausas (\texttt{RequestVote}). Mazgas per rinkimų terminą gali balsuoti tik už vieną mazgą. Galiausiai: arba kandidatas laimi rinkimus, arba kitas mazgas laimi rinkimus, arba lyderis nėra išrenkamas ir pradedamas naujas balsavimas~\cite{ongaro_consensus}.
 
@@ -116,17 +116,26 @@ Net jei dalis mazgų nustojo veikti ar yra lėti, lyderis pakartotinai siunčia 
 
 Nors didžioji dalis Raft algoritmo savybių yra įgyvendintos pagal Raft specifikaciją, dėl Erlang kalbos ypatybių ir konkrečių naudojimo scenarijų Ra išsiskiria nuo specifikacijos, pavyzdžiui, žurnalo perdavimo ir gedimų aptikimo algoritmais~\cite{rabbitmqra}.
 
-Pirmoje dalyje apžvelgsime Raft praplėtimus, padarytus Ra.
+Pirmoje dalyje apžvelgsime Erlang kalbos ypatybes, kas leis mums geriau suprasti kaip veikia Ra pasirinkti įgyvendinimo sprendimai. Antroje dalyje apžvelgsime Raft praplėtimus, padarytus Ra bibliotekoje.
+
+\subsection{Paskirstytas programavimas Erlang}
+
+Erlang yra funkcinė programavimo kalba leidžianti kurti paskirstytas, atsparias gedimams, ir didelio prieinamumo reikalaujančias sistemas. Pavadinimas ,,Erlang'' gali būti naudojamas kaip sinonimas ,,Erlang/OTP'', kur OTP (angl. \textit{Open Telecom Platform}, šiame darbe naudosime anglišką santrumpą) yra karkasas skirtas supaprastinti skirtingoms sistemoms bendrų bruožų įgyvendinimą; OTP yra prieinamas kartu su Erlang kalba ir yra standartinės bibliotekos, kaip kalbos C++ \texttt{std}, atitikmuo~\cite{erlang_introduction}. Šiame darbe autoriai naudoja pavadinimą ,,Erlang'' tik Erlang programavimo kalbai vadinti.
+
+Pagrindinis Erlang vykdymo vienetas yra mazgas (angl. \textit{node}) -- tai yra Erlang virtualios mašinos vienetas (paskirstytos sistemos vienetus taip pat vadinsime mazgais). Erlang mazgas gali turėti tūkstančius jame vykdomų procesų (angl. \textit{process}), o procesai komunikuoja vienas su kitu žinučių pagalba (angl. \textit{message}). Jeigu vienas iš procesų nustos veikti, tai neįtakoja kitų procesų ir jie tęsia savo darbą. Nenumatytoms klaidoms suvaldyti procesai gali būti prižiūrimi prižiūrėtojo (angl. \textit{supervisor}), kuris gautų pranešimą nenumatytai klaidai įvykus ir prižiūrimam procesui nustojus veikti~\cite{erlang_distributed}.
+
+Erlang mazgai gali būti paskirstyti per daugiau negu vieną mašiną ir bendrauja vienas su kitu tranzityvinių ryšiu pagalba. Kai vienas iš mazgų sudaro ryšį su kitu mazgų (pavyzdžiui, panaudojus \texttt{net\_kernel:connect/1}), mazgai apsikeičia žinomais mazgais ir taip sudaro vieną mazgų tinklą. Erlang mazgų sistema yra labai lanksti ir leidžia vienam iš mazgų deleguoti kitam mazgui laisvai pasirinktą funkciją vykdymui (angl. \textit{arbitrary code execution}). \texttt{net\_kernel} modulio pagalba vienas iš mazgų gali prenumeruoti mazgų statusų pakeitimų žinučių gavimą. Tokiu atveju, pasikeitus žinomo mazgo statusui, prenumeravęs mazgas gaus pranešimą su nauju mazgo statusu~\cite{erlang_distributed, hebert_learn_2013}. Ra bibliotekos atveju, didžiausią sistemos prieinamumą suteiks nelyginio skaičiaus mašinų su vienu Erlang mazgu vykdančių Ra kodą kiekvienoje mašinoje paskirstytos sistemos architektūra.
+
+\TD{where was I going with this}
+Ra bibliotekoje yra naudojamas OTP karkasas. \texttt{gen\_statem} naudojamas Raft mazgų būsenoms ir pereimams tarp jų aprašyti. \texttt{gen\_event} naudojamas 
 
 \subsection{Ra įgyvendinti Raft algoritmo praplėtimai}
 
-Dėl Erlang kalbos ypatybių, konkretaus naudojimo scenarijaus ir siekio optimizuoti Raft algoritmo veikimo laiką ir naudojamų duomenų kiekį~\cite{rabbitmqra}, Ra išsiskiria nuo specifikacijos kelių savybių įgyvendinimu.
+Dėl Erlang kalbos ypatybių, konkretaus naudojimo scenarijaus ir siekio optimizuoti Raft algoritmo veikimo laiką ir naudojamų duomenų kiekį, Ra išsiskiria nuo specifikacijos kelių savybių įgyvendinimu~\cite{rabbitmqra}.
 
 \subsubsection{Ra žurnalo perdavimo algoritmas}
 
-Ra nenaudoja žurnalo įrašų perdavimo užklausų mazgų gyvybingumui užtikrinti kai visų mazgų žurnalai yra sinchronizuoti. Kai vienas iš mazgų yra pasenęs, tai yra, to mazgo paskutinis sinchronizuotas įrašas yra ankstesnis negu paskutinis įrašas, siųstas lyderio tam mazgui, \texttt{AppendEntries} užklausa yra daroma, bet rečiau, negu pasiūlyta Raft specifikacijoje. Jei skirtumas tarp paskutinio sinchronizuoto įrašo ir paskutinio siųsto įrašo yra labai didelis, mazgo apkrovai sumažinti užklausos nėra siunčiamos~\cite{rabbitmqra}. 
-
-Žurnalų įrašų perdavimas yra vykdomas asinchroniškai, atsakymai yra grupuojami~\cite{rabbitmqra}.
+Ra nenaudoja žurnalo įrašų perdavimo užklausų mazgų gyvybingumui užtikrinti kai visų mazgų žurnalai yra sinchronizuoti. Kai vienas iš mazgų yra pasenęs, tai yra, to mazgo paskutinis sinchronizuotas įrašas yra ankstesnis negu paskutinis įrašas, siųstas lyderio tam mazgui, \texttt{AppendEntries} užklausa yra daroma, bet rečiau, negu pasiūlyta Raft specifikacijoje. Jei skirtumas tarp paskutinio sinchronizuoto įrašo ir paskutinio siųsto įrašo yra labai didelis, mazgo apkrovai sumažinti užklausos nėra siunčiamos~\cite{rabbitmqra}. Žurnalų įrašų perdavimas yra vykdomas asinchroniškai, o atsakymai yra grupuojami~\cite{rabbitmqra}.
 
 Ra \texttt{AppendEntries} užklausa naudoja tris nestandartinius laukus: \texttt{last\_index}, \texttt{last\_term}, \texttt{next\_index}. \texttt{last\_index} ir \texttt{last\_term} naudojami lyderio naujam \texttt{commit\_index} apskaičiuoti. \texttt{next\_index} naudojamas kai sekėjui nepavyksta atnaujinti žurnalo, tada šio lauko reikšmė nurodo nuo kurio žurnalo įrašo reikia tęsti žurnalo įrašų siuntimą~\cite{rabbitmqra}.
 
@@ -134,7 +143,7 @@ Ra \texttt{AppendEntries} užklausa naudoja tris nestandartinius laukus: \texttt
 
 Ra nenaudoja Raft aprašyto gedimo aptikimo algoritmo. Ra naudoja gimtąjį Erlang mazgų stebėjimo infrastruktūrą stebėti ar mazgai nenustojo veikti ir Aten\footnote{https://github.com/rabbitmq/aten} biblioteką mazgų susisiekimo klaidoms aptikti~\cite{rabbitmqra}.
 
-Erlang monitoriai leidžia greitai aptikti mazgų neveikimą kodo klaidos metimo atveju (angl. ,,crash''). Stebėtojui yra išsiunčiama \texttt{'DOWN'} žinutė~\cite{ericsson_erlang_processes_2016}. Erlang monitoriai užtikrina greitą lyderio mazgo neveikimo aptikimą jo sekėjais ir taip iš dalies pakeičia Raft širdies plakimo mechanizmą~\cite{rabbitmqra}. Aten biblioteka leidžia aptikti tinklo paskirstymo problemas, kaip mazgų nepasiekiamumą per tinklą. Kai Aten įtaria kad vienas iš mazgų yra nepasiekiamas, yra išsiunčiama \texttt{nodedown} žinutė mazgo stebėtojui. Atitinkamai, jei mazgas ,,atsigauna'' ir atrodo vėl veikiantis, yra išsiunčiama \texttt{nodeup} žinutė~\cite{rabbitmq_aten_2020}. Kartu Erlang monitoriai ir Aten biblioteka, anot Ra autorių, užtikrina mazgų gyvumą ir pakeičia Raft aprašytą širdies plakimo mechanizmą~\cite{rabbitmqra}.
+Erlang monitoriai leidžia greitai aptikti mazgų neveikimą kodo klaidos metimo atveju (angl. \textit{crash}). Stebėtojui yra išsiunčiama \texttt{'DOWN'} žinutė~\cite{ericsson_erlang_processes_2016}. Erlang monitoriai užtikrina greitą lyderio mazgo neveikimo aptikimą jo sekėjais ir taip iš dalies pakeičia Raft širdies plakimo mechanizmą~\cite{rabbitmqra}. Aten biblioteka leidžia aptikti tinklo paskirstymo problemas, kaip mazgų nepasiekiamumą per tinklą. Kai Aten įtaria kad vienas iš mazgų yra nepasiekiamas, yra išsiunčiama \texttt{nodedown} žinutė mazgo stebėtojui. Atitinkamai, jei mazgas ,,atsigauna'' ir atrodo vėl veikiantis, yra išsiunčiama \texttt{nodeup} žinutė~\cite{rabbitmq_aten_2020}. Kartu Erlang monitoriai ir Aten biblioteka, anot Ra autorių, užtikrina mazgų gyvumą ir pakeičia Raft aprašytą širdies plakimo mechanizmą~\cite{rabbitmqra}.
 
 Ra bibliotekoje visi mazgai kurie naudoja Raft algoritmą yra įgyvendinti kaip būsenų mašinos Erlang modulio \texttt{gen\_statem}\footnote{http://erlang.org/doc/man/gen\_statem.html} pagalba. 
 Pirmiausia būsenų mašina  prenumeruoja gauti pranešimus apie mazgų statusų pokyčius su \texttt{net\_kernel:monitor\_nodes/1}\footnote{http://erlang.org/doc/man/net\_kernel.html\#monitor\_nodes-1}. Kai vienas iš mazgų tampa neprieinamas, mazgas gauna \texttt{'DOWN'} pranešimą ir įvykdo atitinkamą Raft algoritmo logiką.
