add actor model note and references

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -111,3 +111,25 @@
 	author = {Hebert, Fred},
 	date = {2013-01-13}
 }
+
+@article{agha_actors_1985,
+	title = {{ACTORS}: A Model of Concurrent Computation in Distributed Systems},
+	url = {https://dspace.mit.edu/handle/1721.1/6952},
+	shorttitle = {{ACTORS}},
+	abstract = {A foundational model of concurrency is  developed in this thesis. We examine issues  in the design of parallel systems and show  why the actor model is suitable for exploiting  large-scale parallelism. Concurrency in actors  is constrained only by the availability of  hardware resources and by the logical  dependence inherent in the computation.  Unlike dataflow and functional programming,  however, actors are dynamically  reconfigurable and can model shared  resources with changing local state.  Concurrency is spawned in actors using  asynchronous message-passing, pipelining,  and the dynamic creation of actors. This  thesis deals with some central issues in  distributed computing. Specifically, problems  of divergence and deadlock are addressed.  For example, actors permit dynamic deadlock  detection and removal. The problem of  divergence is contained because  independent transactions can execute  concurrently and potentially infinite processes  are nevertheless available for interaction.},
+	author = {Agha, Gul Abdulnabi},
+	urldate = {2020-05-14},
+	date = {1985-06-01},
+	langid = {american},
+	note = {Accepted: 2004-10-20T20:10:20Z},
+	file = {Full Text PDF:C\:\\Users\\Edvard\\Zotero\\storage\\K5ZEVRMU\\Agha - 1985 - ACTORS A Model of Concurrent Computation in Distr.pdf:application/pdf;Snapshot:C\:\\Users\\Edvard\\Zotero\\storage\\5GVEF55X\\6952.html:text/html}
+}
+
+@article{farrugia_towards_nodate,
+	title = {Towards a Formalisation of Erlang Failure and Failure Detection},
+	abstract = {This paper discusses preliminary investigations on the behaviour of the error handling mechanisms in Erlang, a parallel language which is renowned for its fault tolerant capabilities. A formal model is deﬁned in order to provide a precise and unambiguous description of the behaviour of these mechanisms. The correctness of the model is evaluated by considering a simple Erlang program and comparing the behaviour as described by the formal semantics with that of actual Erlang.},
+	pages = {6},
+	author = {Farrugia, Audrianne and Francalanza, Adrian},
+	langid = {english},
+	file = {Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:C\:\\Users\\Edvard\\Zotero\\storage\\56YDURMC\\Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:application/pdf}
+}
