Updates from Overleaf

--- a/kursinis.tex
+++ b/kursinis.tex
@@ -53,8 +53,9 @@ Formaliai, paskirstyta sistema yra skaičiavimų elementų (toliau - mazgų) rin
 
 Šiame darbe išnagrinėti Raft~\cite{ongaro_consensus} konsensuso algoritmo praplėtimai naudojami Ra bibliotekoje. Darbo tikslas yra patikrinti, ar Raft algoritmas, praplėstas Ra naudojamais mazgų neveikimo aptikimo praplėtimais vis dar atitinka pagrindines Raft algoritmo savybes ir užtikrina efektyvų mazgų neveikimo aptikimą. ~\cite{ongaro_consensus, rabbitmqra}.
 
-Šiame darbe parodyta, kad Raft algoritmo bibliotekoje Ra naudojami gimtieji Erlang mazgų neveikimo aptikimo metodai atitinka Raft algoritmo aprašytus širdies plakimo (angl. \textit{heartbeat}) procedūras. Ra greičiau suvaldo atvejus, kai mazgas netikėtai nustoja veikti (angl. \textit{crash}), o jei mazgas yra nepasiekiamas ar lėtas, negyvybingumo aptikimo greitis atitinką Raft popieriuje aprašytus scenarijus.
+Šiame darbe parodyta, kad Raft algoritmo bibliotekoje Ra naudojami gimtieji Erlang mazgų neveikimo aptikimo metodai atitinka Raft algoritmo aprašytus širdies plakimo (angl. \textit{heartbeat}) procedūras. Ra suvaldo atvejus, kai mazgas netikėtai nustoja veikti (angl. \textit{crash}), o jei mazgas yra nepasiekiamas ar lėtas, negyvybingumo aptikimo algoritmas atitinką Raft popieriuje aprašytus scenarijus.
 
+\TD{tai kiek dalių lieka - 2/3?}
 Šis darbas yra paskirstytas į tris dalis. Pirmoje dalyje yra apžvelgiamas Raft algoritmas ir detaliau išnagrinėjami kelių jo dalių, susijusiu su mazgų neveikimo aptikimų, veikimo principai. Antroje dalyje yra aprašomos Raft algoritmo bibliotekoje Ra naudojamos kalbos Erlang ypatybės ir apžvelgiami Ra padaryti praplėtimai. Trečioje dalyje detaliau aprašomas Ra naudojami mazgų neveikimo aptikimo metodai ir jie yra palyginami su Raft popieriuje pasiūlytų sprendimu.
 
 \section{Raft algoritmo apžvalga}
@@ -95,17 +96,17 @@ Net jei dalis mazgų nustojo veikti ar lėtai grąžina atsakymus, lyderis pakar
 
 Nors didžioji dalis Raft algoritmo savybių yra įgyvendintos pagal Raft specifikaciją, dėl Erlang kalbos ypatybių ir konkrečių naudojimo scenarijų Ra išsiskiria nuo specifikacijos, pavyzdžiui, žurnalo perdavimo ir gedimų aptikimo algoritmais~\cite{rabbitmqra}.
 
-Pirmoje dalyje apžvelgsime Erlang kalbos ypatybes, kas leis mums geriau suprasti kaip veikia Ra pasirinkti įgyvendinimo sprendimai. Antroje dalyje apžvelgsime Raft praplėtimus, padarytus Ra bibliotekoje.
+Pirmoje dalyje apžvelgsime Erlang kalbos ypatybes, kas leis mums geriau suprasti kaip veikia Ra pasirinkti įgyvendinimo sprendimai. Antroje dalyje apžvelgsime Raft praplėtimus, padarytus Ra bibliotekoje. Trečioje dalyje yra detaliau išnagrinėjamas Ra naudojamas klaidų aptikimo mechanizmas ir jis yra palyginamas su Raft pasiūlytų širdies plakimo mechanizmu naudojant \texttt{AppendEntries} užklausas.
 
 \subsection{Paskirstytas programavimas Erlang}
 
-Erlang yra funkcinė programavimo kalba leidžianti kurti paskirstytas, atsparias gedimams, ir didelio prieinamumo reikalaujančias sistemas. Pavadinimas ,,Erlang'' gali būti naudojamas kaip sinonimas ,,Erlang/OTP'', kur OTP (angl. \textit{Open Telecom Platform}, šiame darbe naudosime anglišką santrumpą) yra karkasas skirtas supaprastinti skirtingoms sistemoms bendrų bruožų įgyvendinimą; OTP yra prieinamas kartu su Erlang kalba ir yra standartinės bibliotekos, kaip kalbos C++ \texttt{std}, atitikmuo~\cite{erlang_introduction}. Šiame darbe autoriai naudoja pavadinimą ,,Erlang'' tik Erlang programavimo kalbai vadinti.
+Erlang yra funkcinė programavimo kalba leidžianti kurti paskirstytas, atsparias gedimams, ir didelio prieinamumo reikalaujančias sistemas. Pavadinimas ,,Erlang'' gali būti naudojamas kaip sinonimas ,,Erlang/OTP'', kur OTP (angl. \textit{Open Telecom Platform}, šiame darbe naudojame anglišką santrumpą) yra karkasas skirtas supaprastinti skirtingų sistemų bendrų bruožų įgyvendinimą; OTP yra prieinamas kartu su Erlang kalba ir yra standartinės bibliotekos, kaip kalbos C++ bibliotekos \texttt{std}, atitikmuo~\cite{erlang_introduction}. Šiame darbe autoriai naudoja pavadinimą ,,Erlang'' tik Erlang programavimo kalbai vadinti.
 
-Paskirstytas programavimas Erlang yra pagrįstas aktorių modeliu\cite{farrugia_towards_nodate, agha_actors_1985}. Pagrindinis Erlang vykdymo vienetas yra mazgas (angl. \textit{node}) -- tai yra Erlang virtualios mašinos vienetas (paskirstytos sistemos vienetus taip pat vadinsime mazgais). Erlang mazgas gali turėti tūkstančius jame vykdomų procesų (angl. \textit{process}), o procesai komunikuoja vienas su kitu žinučių pagalba (angl. \textit{message}). Jeigu vienas iš procesų nustos veikti, tai neįtakoja kitų procesų ir jie tęsia savo darbą. Nenumatytoms klaidoms suvaldyti procesai gali būti prižiūrimi prižiūrėtojo (angl. \textit{supervisor}), kuris gautų pranešimą nenumatytai klaidai įvykus ir prižiūrimam procesui nustojus veikti~\cite{erlang_distributed}.
+Paskirstytas programavimas Erlang yra pagrįstas aktorių modeliu~\cite{farrugia_towards_nodate, agha_actors_1985}. Pagrindinis Erlang vykdymo vienetas yra mazgas (angl. \textit{node}) -- tai yra Erlang virtualios mašinos vienetas (paskirstytos sistemos vienetus taip pat vadinsime mazgais). Erlang mazgas gali turėti tūkstančius jame vykdomų procesų (angl. \textit{process}), o procesai komunikuoja vienas su kitu žinučių pagalba (angl. \textit{message}). Jeigu vienas iš procesų nustos veikti, tai neįtakoja kitų procesų ir jie tęsia savo darbą. Nenumatytoms klaidoms suvaldyti procesai gali būti prižiūrimi prižiūrėtojo (angl. \textit{supervisor}), kuris gautų pranešimą nenumatytai klaidai įvykus ir prižiūrimam procesui nustojus veikti~\cite{erlang_distributed}.
 
 Erlang mazgai gali būti paskirstyti per daugiau negu vieną mašiną ir bendrauja vienas su kitu tranzityvinių ryšiu pagalba. Kai vienas iš mazgų sudaro ryšį su kitu mazgų (pavyzdžiui, panaudojus \texttt{net\_kernel:connect/1}), mazgai apsikeičia žinomais mazgais ir taip sudaro vieną mazgų tinklą. Erlang mazgų sistema yra labai lanksti ir leidžia vienam iš mazgų deleguoti kitam mazgui laisvai pasirinktą funkciją vykdymui (angl. \textit{arbitrary code execution}). \texttt{net\_kernel} modulio pagalba vienas iš mazgų gali prenumeruoti mazgų statusų pakeitimų žinučių gavimą. Tokiu atveju, pasikeitus žinomo mazgo statusui, prenumeravęs mazgas gaus pranešimą su nauju mazgo statusu~\cite{erlang_distributed, hebert_learn_2013}. Ra bibliotekos atveju, didžiausią sistemos prieinamumą suteiks nelyginio skaičiaus mašinų su vienu Erlang mazgu vykdančių Ra kodą kiekvienoje mašinoje paskirstytos sistemos architektūra.
 
-Ra bibliotekoje yra naudojamas OTP karkaso \texttt{gen\_statem} Raft mazgų būsenoms ir perejimams tarp jų aprašyti,
+Erlang mazgai palaiko ryšį tarp vienas kito "širdies plakimo" (angl. \emph{heartbeat}) mechanizmo pagalba. \texttt{ticktime} yra širdies plakimo užklausos siuntimo intervalas padaugintas iš keturių ir žymi laiką, po kurio mazgas bus laikomas nepasiekiamu. Kai vienas iš mazgų negauna iš kito mazgo jo gyvavimo patvirtinančio pranešimo per \texttt{ticktime} sekundžių, tas stebimas mazgas laikomas nepasiekiamu. Širdies plakimo užklausos neišsiuntimo priežastimi gali būti kaip ir techninės įrangos gedimai ir ryšio sutrikimai, taip ir mazgo siuntimo kanalo didelis užimtumas -- Erlang naudoja tą patį TCP (angl. \emph{Transmission Control Protocol} kanalą naudotojo aprašytoms ir širdies plakimo žinutėms siųsti, todėl didelių žinučių siuntimas gali priversti širdies plakimo žinutes ilgai laukti savo eilės~\cite{hebert_learn_2013}.
 
 \subsection{Ra įgyvendinti Raft algoritmo praplėtimai}
 
@@ -121,16 +122,24 @@ Ra \texttt{AppendEntries} užklausa naudoja tris nestandartinius laukus: \texttt
 
 Ra nenaudoja Raft aprašyto gedimo aptikimo algoritmo. Ra naudoja gimtąjį Erlang mazgų stebėjimo infrastruktūrą stebėti ar mazgai nenustojo veikti ir Aten\footnote{https://github.com/rabbitmq/aten} biblioteką mazgų susisiekimo klaidoms aptikti~\cite{rabbitmqra}.
 
-Erlang monitoriai leidžia greitai aptikti mazgų neveikimą kodo klaidos metimo atveju (angl. \textit{crash}). Stebėtojui yra išsiunčiama \texttt{'DOWN'} žinutė~\cite{ericsson_erlang_processes_2016}. Erlang monitoriai užtikrina greitą lyderio mazgo neveikimo aptikimą jo sekėjais ir taip iš dalies pakeičia Raft širdies plakimo mechanizmą~\cite{rabbitmqra}. Aten biblioteka leidžia aptikti tinklo paskirstymo problemas, kaip mazgų nepasiekiamumą per tinklą. Kai Aten įtaria kad vienas iš mazgų yra nepasiekiamas, yra išsiunčiama \texttt{nodedown} žinutė mazgo stebėtojui. Atitinkamai, jei mazgas ,,atsigauna'' ir atrodo vėl veikiantis, yra išsiunčiama \texttt{nodeup} žinutė~\cite{rabbitmq_aten_2020}. Kartu Erlang monitoriai ir Aten biblioteka, anot Ra autorių, užtikrina mazgų gyvumą ir pakeičia Raft aprašytą širdies plakimo mechanizmą~\cite{rabbitmqra}.
+Erlang monitoriai leidžia greitai aptikti mazgų neveikimą kodo klaidos metimo atveju (angl. \textit{crash}). Stebėtojui yra išsiunčiama \texttt{'DOWN'} žinutė~\cite{ericsson_erlang_processes_2016}. Erlang monitoriai užtikrina greitą lyderio mazgo neveikimo aptikimą jo sekėjais ir taip iš dalies pakeičia Raft širdies plakimo mechanizmą~\cite{rabbitmqra}. Aten biblioteka leidžia aptikti tinklo paskirstymo problemas, kaip mazgų nepasiekiamumą per tinklą. Kai Aten įtaria kad vienas iš mazgų yra nepasiekiamas, yra išsiunčiama \texttt{nodedown} žinutė mazgo stebėtojui. Atitinkamai, jei mazgas ,,atsigauna'' ir atrodo vėl veikiantis, yra išsiunčiama \texttt{nodeup} žinutė~\cite{rabbitmq_aten_2020}. Kartu Erlang monitoriai ir Aten biblioteka, anot Ra autorių, užtikrina mazgų gyvumą ir pakeičia Raft aprašytą širdies plakimo mechanizmą~\cite{rabbitmqra}. 
 
-Ra bibliotekoje visi mazgai kurie naudoja Raft algoritmą yra įgyvendinti kaip būsenų mašinos Erlang modulio \texttt{gen\_statem}\footnote{http://erlang.org/doc/man/gen\_statem.html} pagalba. 
-Pirmiausia būsenų mašina  prenumeruoja gauti pranešimus apie mazgų statusų pokyčius su \texttt{net\_kernel:monitor\_nodes/1}\footnote{http://erlang.org/doc/man/net\_kernel.html\#monitor\_nodes-1}. Kai vienas iš mazgų tampa neprieinamas, mazgas gauna \texttt{'DOWN'} pranešimą ir įvykdo atitinkamą Raft algoritmo logiką.
+Ra bibliotekoje visi mazgai kurie naudoja Raft algoritmą yra įgyvendinti kaip būsenų mašinos Erlang modulio \texttt{gen\_statem} \footnote{http://erlang.org/doc/man/gen\_statem.html} pagalba. 
+Pirmiausia būsenų mašina  prenumeruoja gauti pranešimus apie mazgų statusų pokyčius su \texttt{net\_kernel:monitor\_nodes/1}\footnote{http://erlang.org/doc/man/net\_kernel.html\#monitor\_nodes-1}. Kai vienas iš mazgų tampa neprieinamas, mazgas gauna \texttt{'DOWN'} pranešimą ir įvykdo atitinkamą Raft algoritmo logiką. Neprieinamumo tikrinimo laiką \texttt{ticktime} naudotojas nustato pagal savo poreikį konfigūracinio parametro pagalba.
 
-\section{Raft Ra klaidų aptikimo praplėtimo korektiškumas}
+\subsection{Raft Ra klaidų aptikimo praplėtimo korektiškumas}
+
+Šioje dalyje yra detaliau išanalizuojamas Ra klaidų sistemos mazguose aptikimo metodai ir jie yra palyginami su Raft popieriuje pasiūlytų širdies plakimo mechanizmu naudojant \texttt{AppendEntries} užklausas.
+
+
 
 
 
 \sectionnonum{Rezultatai ir išvados}
+
+Šiame darbe buvo išnagrinėtas Raft algoritmas ir jo įgyvendinimas -- Ra biblioteka. Detaliau buvo palyginti Raft darbe aprašyti mazgų negyvybingumo aptikimo algoritmai su Ra naudojamais Erlang mazgų stebėjimo infrastruktūra. Nustatyta, kad Raft pasiūlytas mechanizmas, ir Ra naudojamas Erlang gimtasis funkcionalumas, yra to paties širdies plakimo algoritmo įgyvendinimai ir esminių skirtumų tarp jų nėra. Todėl teigiama, kad Ra įgyvendinimas yra korektiškas ir išlaiko Raft savybes.
+
+Erlang Raft algoritmo įgyvendinimas Ra yra gerokai palengvinamas tuo, kad gimtosios Erlang funkcijos ir bibliotekos yra skirtos būtent tokių paskirstytų sistemų būsenų stebėjimui, todėl įgyvendinimo kaštai yra dar labiau sumažinami. Visa tai gerai komponuoja su Raft autorių motyvacija~\cite{ongaro_consensus} -- padaryti paskirstytų sistemų konsensuso algoritmo įgyvendinimą kuo paprastesnį, sumažinti galimų klaidų skaičių, leisti kuo lengviau papildyti esamą funkcionalumą naujais praplėtimais. Šio darbo autorių nuomone, Ra biblioteka yra ne tik puikus techninio Raft algoritmo įgyvendinimo, bet ir Raft paprastumo ir aiškumo dvasią išlaikantis pavyzdys. 
 
 %Rezultatų ir išvadų dalyje turi būti aiškiai išdėstomi pagrindiniai darbo
 %rezultatai (kažkas išanalizuota, kažkas sukurta, kažkas įdiegta) ir pateikiamos
